fix price overflow & the max num of the list.

--- a/less/style.less
+++ b/less/style.less
@@ -512,7 +512,8 @@ footer {
 				background: #D3A871;
 				font-family: 'Arial';
 				text-align: center;
-				line-height: 22px;
+				line-height: 20px;
+				font-size: 12px;
 			}
 		}
 		content {
@@ -521,7 +522,7 @@ footer {
 			&::before {
 				position: absolute;
 
-				left: 16px;
+				left: 15px;
 				content: ' ';
 				width: 2px;
 				height: 100%;
@@ -560,6 +561,82 @@ footer {
 		}title:nth-of-type(9) {
 			&::before {
 				content: '9';
+			}
+		}title:nth-of-type(10) {
+			&::before {
+				content: '10';
+			}
+		}title:nth-of-type(11) {
+			&::before {
+				content: '11';
+			}
+		}title:nth-of-type(12) {
+			&::before {
+				content: '12';
+			}
+		}title:nth-of-type(13) {
+			&::before {
+				content: '13';
+			}
+		}title:nth-of-type(14) {
+			&::before {
+				content: '14';
+			}
+		}title:nth-of-type(15) {
+			&::before {
+				content: '15';
+			}
+		}title:nth-of-type(16) {
+			&::before {
+				content: '16';
+			}
+		}title:nth-of-type(17) {
+			&::before {
+				content: '17';
+			}
+		}title:nth-of-type(18) {
+			&::before {
+				content: '18';
+			}
+		}title:nth-of-type(20) {
+			&::before {
+				content: '20';
+			}
+		}title:nth-of-type(21) {
+			&::before {
+				content: '21';
+			}
+		}title:nth-of-type(22) {
+			&::before {
+				content: '22';
+			}
+		}title:nth-of-type(23) {
+			&::before {
+				content: '23';
+			}
+		}title:nth-of-type(24) {
+			&::before {
+				content: '24';
+			}
+		}title:nth-of-type(25) {
+			&::before {
+				content: '25';
+			}
+		}title:nth-of-type(26) {
+			&::before {
+				content: '26';
+			}
+		}title:nth-of-type(27) {
+			&::before {
+				content: '27';
+			}
+		}title:nth-of-type(28) {
+			&::before {
+				content: '28';
+			}
+		}title:nth-of-type(29) {
+			&::before {
+				content: '29';
 			}
 		}
 	}
